watch/radarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  serviceName: radarr
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeName: nereid-1
      containers:
        - name: radarr
          image: ghcr.io/hotio/radarr:release
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7878
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 2Gi
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: media
          persistentVolumeClaim:
            claimName: media

---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - name: http
      port: 80
      targetPort: http
